refactor runSession